--- a/less/iphone.less
+++ b/less/iphone.less
@@ -66,6 +66,7 @@
 		border-width: 1px;
 	}
 	.iphone, .iphone.white, .gray-section .iphone {
+		margin-top: 20px !important;
 		background-size: @iphone-width * 0.6667  @iphone-height * 0.6667;
 		.size(@iphone-width * 0.6667; @iphone-height * 0.6667);
 		&>img, &>.frame {
